<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cancel_item"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/actionBarItemBackground"
        android:scaleType="centerInside"
        android:text="@string/cancel_button_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/item_text_intro"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:background="?attr/actionBarItemBackground"
        android:gravity="center"
        android:scaleType="centerInside"
        android:text="@string/item_text_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_item"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/actionBarItemBackground"
        android:scaleType="centerInside"
        android:enabled="false"
        android:text="@string/save_button_text"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>