<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.list.ListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_xxxl"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:id="@+id/completed_deals_text"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/size_s"
                android:fitsSystemWindows="true"
                android:gravity="bottom"
                android:src="@mipmap/ic_launcher"
                android:text="@string/completed"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    style="@style/AppTheme.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/my_deals"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="enterAlwaysCollapsed" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extra_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="end"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/visibility"
            style="@style/SmallElevatedButton"
            android:layout_width="@dimen/size_l"
            android:layout_height="@dimen/size_l"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/size_l"
            android:text="@string/visibility_label"
            app:layout_anchorGravity="end"
            app:layout_constraintEnd_toStartOf="@id/preferences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:srcCompat="@drawable/visibility" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/preferences"
            style="@style/SmallElevatedButton"
            android:layout_width="@dimen/size_l"
            android:layout_height="@dimen/size_l"
            android:layout_margin="@dimen/default_padding"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/size_l"
            android:text="@string/preferences_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/settings" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".presentation.list.ListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>